Prepare test scaffolds for JDK 25